    of the repository description, which is ugly but otherwise harmless.
  * Add timestamps to trust.log and remote.log too.
  * git-annex-shell: Added the --uuid option.
  * git-annex now asks git-annex-shell to verify that it's operating in 
    the expected repository.
  * Note that this git-annex will not interoperate with remotes using 
    older versions of git-annex-shell.

 -- Joey Hess <joeyh@debian.org>  Thu, 29 Sep 2011 18:58:53 -0400

git-annex (3.20110928) unstable; urgency=low

  * --in can be used to make git-annex only operate on files
    believed to be present in a given repository.
  * Arbitrarily complex expressions can be built to limit the files git-annex
    operates on, by combining the options --not --and --or -( and -)
    Example: git annex get --exclude '*.mp3' --and --not -( --in usbdrive --or --in archive -)
  * --copies=N can be used to make git-annex only operate on files with
    the specified number of copies. (And --not --copies=N for the inverse.)
  * find: Rather than only showing files whose contents are present,
    when used with --exclude --copies or --in, displays all files that
    match the specified conditions.
  * Note that this is a behavior change for git-annex find! Old behavior
    can be gotten by using: git-annex find --in .
  * status: Massively sped up; remove --fast mode.
  * unused: File contents used by branches and tags are no longer
    considered unused, even when not used by the current branch. This is
    the final piece of the puzzle needed for git-annex to to play nicely
    with branches.

 -- Joey Hess <joeyh@debian.org>  Wed, 28 Sep 2011 18:14:02 -0400

git-annex (3.20110915) unstable; urgency=low

  * whereis: Show untrusted locations separately and do not include in
    location count.
  * Fix build without S3.
  * addurl: Always use whole url as destination filename, rather than
    only its file component.
  * get, drop, copy: Added --auto option, which decides whether